# slurry-websocket

./: .bumpversion.cfg  .pylintrc  .travis.yml  CONTRIBUTING.rst  HISTORY.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
slurry_websocket/: __init__.py  websocket.py
tests/: test_integration.py  test_slurry_websocket.py
