[tool.poetry]
name = "slurry-websocket"
version = "0.1.0"
description = ""
authors = ["Anders Ellenshøj Andersen <andersa@ellenshoej.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
slurry = "^0.3.1"
trio-websocket = "^0.8.0"
ujson = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
pytest-trio = "^0.6.0"
bump2version = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
